--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "CLME"]
+	path = CLME
+	url = https://github.com/jelsema/clme
+	shallow = true
+	registered = true
